# onfido_assignment

./: pyproject.toml
onfido_assign/: Data Scientist - Case study.docx  EDA.ipynb
onfido_assign/.ipynb_checkpoints/: EDA-checkpoint.ipynb
onfido_assign/notebooks/: EDA-2.ipynb  performance_assessment-clean-2.ipynb  performance_assessment-clean.ipynb  performance_assessment.ipynb
onfido_assign/notebooks/.ipynb_checkpoints/: EDA-2-checkpoint.ipynb  EDA-checkpoint.ipynb  performance_assessment-checkpoint.ipynb  performance_assessment-clean-checkpoint.ipynb  performance_assessment_draft-checkpoint.ipynb
onfido_assign/notebooks/drafts/: EDA-2.ipynb
tests/: test_onfido_assign.py
