[tool.poetry]
name = "onfido_assign"
version = "0.1.0"
description = ""
authors = ["jccazes <cazes.jean.christophe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.0"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
